src/components/views/Customer/CustomerMenu/style/Menu.scss
@import '../../../../../theme/theme';

.MenuContainer {
    display: flex;
    flex-flow: column;
    .InnerContainer {
        display: flex;
        flex-flow: column;
        height: 100vh;
        padding: 30px;
        .HeaderCheckoutContainer {
            display: flex;
            justify-content: space-between;
            button {
                margin: auto 10px;
            }
        }
        .FoodMenuContainer {
            max-width: 70%;
            display: flex;
            flex-flow: row wrap;
            margin: auto;
            max-height: 500px;
            overflow-y: auto;
        }
    }
    .CheckoutDropdown {
        background-color: GetColorTheme(MainContrast);
        height: 95vh;
        max-width: 85%;
        min-width: 70%;
        z-index: 1;
        position: absolute;
        left: 28%;
        border-radius: 0 0 40px 40px;
        .CheckoutContainer {
            position: absolute;
            z-index: 1;
            width: 102%;
            display: flex;
            flex-flow: column;
            background-color: GetColorTheme(Base);
            right: -3px;
            border-radius: 40px;
            height: 75vh;
            padding: 10px;
            .CheckoutList {
                max-height: 70%;
                min-height: 350px;
                width: 90%;
                margin: auto;
                overflow-y: auto;
            }
        }
    }
}

